--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -2,10 +2,11 @@ name: Delete Artifacts
 on: workflow_dispatch
 
 jobs:
-  - uses: game-ci/unity-builder@v2
-    env:
-      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-      UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-      UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-    with:
-      targetPlatform: StandaloneWindows64
+  build:
+    - uses: game-ci/unity-builder@v2
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+      with:
+        targetPlatform: StandaloneWindows64
