--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -3,6 +3,8 @@ on: workflow_dispatch
 
 jobs:
   build:
+    runs-on: self-hosted
+    steps:
     - uses: game-ci/unity-builder@v2
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
