--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
+    - uses: actions/checkout@v3
     - uses: game-ci/unity-builder@v2
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
