--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -3,13 +3,25 @@ on: workflow_dispatch
 
 jobs:
   build:
+    name: Build my project ✨
     runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v3
-    - uses: game-ci/unity-builder@v2
+      # Checkout
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      # Cache
+    - uses: actions/cache@v2
+      with:
+        path: Library
+        key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+        restore-keys: |
+          Library-
+      # Build
+    - name: Build project
+      uses: game-ci/unity-builder@v2
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
-        targetPlatform: StandaloneWindows64
+        targetPlatform: WebGL
